# vimnail

./: .gitignore  Cargo.toml  README.md  TODO-features.txt
src/: action_processer.rs  action_processer_utils.rs  action_type.rs  app.rs  board.rs  command_state.rs  command_type.rs  constants.rs  direction.rs  edit_type.rs  graphics.rs  input_action.rs  insert_type.rs  item.rs  item_collection.rs  key_state.rs  keyboard_input_tracker.rs  main.rs  mode.rs  mode_history.rs  text_input.rs
src/graphics/: input_visualizer.rs  mode_visualizer.rs
