[package]
name = "vimnail"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.7"
nalgebra = {version = "0.30", features = ["mint"] }
mint = "0.5"
cgmath = { version = "0.18", features = ["mint"]}
rand = "0.8"
image= "0.24"